4.1.8
	Fix build with both SpamAssassin and SPF (Joel Bertrand)
4.1.7
	Add p0f-required macros in milter-greylist.m4 (Joel Bertrand)
	Fix memory leak (Constantine A. Murenin)
	Add option to match exact domain instead of substrings (Rick Adams)
	Make sure no message chunks is skip at Data stage ACL (Manuel Badzong)
	Removes duplicate <> in SpamAssassin headers (Manuel Badzong)
	Fixes a flaw in SpamAssassin initialization (Manuel Badzong)
        Support SpamAssassin spf and dkim checks (Manuel Badzong)
	Make sure DKIM code does not use invalid pointers
	Add libspf2 support to .spec file for RPM (Joe Pruett)
	Solaris build fix (Johann Klasek)
	Fix memory leak in SpamAssassin code (Manuel Badzong)
	Make implicit default rule at DATA stage silent (Greg Troxel)
4.1.6
	Fix parse bug for "domain no" clause
	Spamassassin support (Manuel Badzong)
	Support for DATA-stage greylisting (Manuel Badzong)
	Allow syslog facility to be configured (Joe Pruett)
	Allow logging to be disabled on a per-ACL basis (Joe Pruett)
	Honour $CPPFLAGS in Makefile (Greg Troxel)
	p0f support
	Experimental DKIM support (nobody tested it)
	libspf2 support in .spec file, for RPM generation (Joe Pruett)
	status support in Debian startup script (Bernhard Schneider)
4.1.5
	Fix huge memory leaks in native LDAP support
4.1.4
	Native LDAP support through OpenLDAP
4.1.3
	Fix build of SPF code
	Fix build of GeoIP code
4.1.2
	Fix auth and tls clauses in ACL so that they accept regex
	Update Debian startup script (Adam Katz)
	Fix bogus ACL when using features not compiled in
	Fix a crash when using SPF (Johann Klasek)
	Fix Typos
4.1.1
	Fix corruption in urlcheck parsing (Benoit Branciard)
	Document what package contains libmilter
	Fix error about stat in greylist.conf (Bob Smith)
	Add configurable dumpfile permissions
	Avoid C99 specific syntax (Greg Troxel)
	Documentation fixes
	Add SPF status selection to ACL
	Add id string to ACL
	Fix typos in documentation (Constantine A. Murenin)
4.0